# milvus-client

./: main.py  main_frame.py  main_menu_bar.py  main_status_bar.py  main_toolbar.py  milvus.py  mywindow.py  panelWindow.py  pyproject.toml  requirements.txt
