[tool.poetry]
name = "test-wxpython"
version = "0.1.0"
description = ""
authors = ["Dominic Lee <leemflee@gmail.com>"]
readme = "README.md"
packages = [{include = "test_wxpython"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
